--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "truffle test"
+    "test": "ganache-cli -p 7545 & truffle test"
   },
   "repository": {
     "type": "git",
