--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,4 +1,4 @@
-name: Node CI
+name: Unit tests
 
 on: [push]
 
@@ -12,14 +12,14 @@ jobs:
         node-version: [10.x, 12.x]
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Test this bad boy ${{ matrix.node-version }}
+    # - uses: actions/checkout@v1
+    - name: Setup Node ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: setup ganache and run test
-      run: |
-        npm ci
-        npm test
+    - name: setup pkgsand run test
+      run: npm ci
+    - name: run test
+      run: npm test
       env:
         CI: true
