--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,9 +17,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: setup pkgsand run test
+    - name: setup pkgs and run test
       run: npm ci
     - name: run test
-      run: npm ci:test
+      run: npm run ci:test
       env:
         CI: true
