--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,25 +1,25 @@
-name: Unit tests
+# name: Unit tests
 
-on: [push]
+# on: [push]
 
-jobs:
-  build:
+# jobs:
+#   build:
 
-    runs-on: ubuntu-latest
+#     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x]
+#     strategy:
+#       matrix:
+#         node-version: [10.x, 12.x]
 
-    steps:
-    - uses: actions/checkout@v1
-    - name: Setup Node ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: setup pkgs and run test
-      run: npm ci
-    - name: run test
-      run: npm run ci:test
-      env:
-        CI: true
+#     steps:
+#     - uses: actions/checkout@v1
+#     - name: Setup Node ${{ matrix.node-version }}
+#       uses: actions/setup-node@v1
+#       with:
+#         node-version: ${{ matrix.node-version }}
+#     - name: setup pkgs and run test
+#       run: npm ci
+#     - name: run test
+#       run: npm run ci:test
+#       env:
+#         CI: true
