--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,9 +1,9 @@
-# name: Unit tests
+name: Unit tests
 
-# on: [push]
+on: [push]
 
-# jobs:
-#   build:
+jobs:
+  build:
 
 #     runs-on: ubuntu-latest
 
